--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "build:server": "webpack --config webpack.config.server.js --mode production",
     "build:client": "webpack --config webpack.config.client.js --mode production",
-    "watch:client": "webpack --config webpack.config.client.js --mode production --watch",
-    "build": "node run build:client && node run build:client",
+    "watch:client": "webpack --config webpack.config.client.js --mode development --watch",
+    "build": "npm run build:client && npm run build:server",
     "start": "node ./dist/app.js"
   },
   "author": "Stephen Sherratt",
@@ -14,11 +14,17 @@
   "devDependencies": {
     "@types/express": "^4.17.3",
     "@types/node": "^13.9.2",
+    "@types/socket.io": "^2.1.4",
+    "@types/socket.io-client": "^1.4.32",
     "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
+    "socket.io": "^2.3.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
+    "socket.io-client": "^2.3.0"
   }
 }
