--- a/package.json
+++ b/package.json
@@ -12,24 +12,26 @@
   },
   "author": "Stephen Sherratt",
   "license": "MIT",
-  "dependencies": {
-    "@types/express": "^4.17.3",
-    "@types/node": "^13.9.2",
-    "@types/socket.io": "^2.1.4",
-    "@types/socket.io-client": "^1.4.32",
+  "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.20.1",
-    "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.3",
+    "@types/node": "^13.9.2",
+    "@types/socket.io": "^2.1.4",
+    "@types/socket.io-client": "^1.4.32",
+    "express": "^4.17.1",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   }
 }
