--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
     "compilerOptions": {
-        "target": "es6",
-        "noImplicitAny": true,
+        "jsx": "react",
+        "jsxFactory": "preactH",
         "module": "commonjs",
+        "noImplicitAny": true,
         "strict": true,
         "esModuleInterop": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "target": "es6"
     }
 }
