--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
   "author": "Stephen Sherratt",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.3",
+    "@types/express-session": "^1.17.0",
+    "@types/express-socket.io-session": "^1.3.2",
+    "@types/node": "^13.9.2",
+    "@types/socket.io": "^2.1.4",
+    "@types/socket.io-client": "^1.4.32",
+    "@types/uuid": "^7.0.2",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
     "eslint": "^6.8.0",
@@ -28,13 +35,12 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "@types/express": "^4.17.3",
-    "@types/node": "^13.9.2",
-    "@types/socket.io": "^2.1.4",
-    "@types/socket.io-client": "^1.4.32",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "express-socket.io-session": "^1.3.5",
     "preact": "^10.3.4",
     "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "uuid": "^7.0.2"
   }
 }
