--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Stephen Sherratt",
   "license": "MIT",
   "devDependencies": {
+    "@types/escape-html": "0.0.20",
     "@types/express": "^4.17.3",
     "@types/express-session": "^1.17.0",
     "@types/express-socket.io-session": "^1.3.2",
@@ -27,6 +28,7 @@
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-react": "^7.19.0",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.3",
