--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.3",
     "@types/express-session": "^1.17.0",
     "@types/express-socket.io-session": "^1.3.2",
+    "@types/immutable": "^3.8.7",
     "@types/node": "^13.9.2",
     "@types/socket.io": "^2.1.4",
     "@types/socket.io-client": "^1.4.32",
@@ -40,6 +41,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "express-socket.io-session": "^1.3.5",
+    "immutable": "^4.0.0-rc.12",
     "preact": "^10.3.4",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
