Remove build step from "npm start"

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch:client": "webpack --config webpack.config.client.js --mode development --watch",
     "build": "npm run build:client && npm run build:server",
     "serve": "npm run build:server && node ./dist/app.js",
-    "start": "npm run build && node ./dist/app.js"
+    "start": "node ./dist/app.js"
   },
   "author": "Stephen Sherratt",
   "license": "MIT",
