--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "watch:server": "webpack --config webpack.config.server.js --mode development --watch",
     "watch:client": "webpack --config webpack.config.client.js --mode development --watch",
     "build": "npm run build:client && npm run build:server",
-    "serve": "npm run build:server && node ./dist/app.js",
+    "serve": "npm run build:server -- --mode development && node ./dist/app.js",
     "start": "node ./dist/app.js"
   },
   "author": "Stephen Sherratt",
   "license": "MIT",
   "devDependencies": {
+    "@types/connect-pg-simple": "^4.2.0",
     "@types/escape-html": "0.0.20",
     "@types/express": "^4.17.3",
     "@types/express-session": "^1.17.0",
@@ -38,10 +39,12 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "connect-pg-simple": "^6.1.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "express-socket.io-session": "^1.3.5",
     "immutable": "^4.0.0-rc.12",
+    "pg": "^7.18.2",
     "preact": "^10.3.4",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
