--- a/package.json
+++ b/package.json
@@ -43,7 +43,11 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "express-socket.io-session": "^1.3.5",
+    "fp-ts": "^2.5.3",
     "immutable": "^4.0.0-rc.12",
+    "io-ts": "^2.1.2",
+    "io-ts-immutable": "^0.1.0",
+    "io-ts-types": "^0.5.6",
     "pg": "^7.18.2",
     "preact": "^10.3.4",
     "socket.io": "^2.3.0",
