--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "strict": true,
         "esModuleInterop": true,
         "sourceMap": true,
-        "target": "es6"
+        "target": "es6",
+        "experimentalDecorators": true
     }
 }
