--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^14.14.36",
     "@types/socket.io": "^2.1.13",
     "@types/socket.io-client": "^1.4.36",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "eslint": "^7.22.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -45,6 +46,7 @@
     "socket.io-client": "^4.0.0",
     "ts-loader": "^8.0.18",
     "typescript": "^4.2.3",
+    "uuid": "^8.3.2",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.5.0",
     "webpack-node-externals": "^2.5.2"
