--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express-socket.io-session": "^1.3.5",
     "fp-ts": "^2.9.5",
     "html-webpack-plugin": "^5.3.1",
+    "immutable": "^4.0.0-rc.12",
     "io-ts": "^2.2.16",
     "preact": "^10.5.13",
     "socket.io": "^4.0.0",
