--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "html-webpack-plugin": "^5.3.1",
     "immutable": "^4.0.0-rc.12",
     "io-ts": "^2.2.16",
+    "io-ts-types": "^0.5.16",
     "preact": "^10.5.13",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
